--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxthub/core": "^0.7.1",
     "@nuxtjs/i18n": "^8.3.3",
     "@nuxtjs/mdc": "^0.8.3",
+    "@nuxtjs/sitemap": "^6.0.0-beta.1",
     "nuxt": "^3.12.4",
     "vue": "latest"
   },
