feat: add PracticeCard

--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
+    "@nuxt/content": "^2.13.2",
     "@nuxt/eslint": "^0.4.0",
     "@nuxt/fonts": "^0.7.1",
     "@nuxt/ui": "^2.18.3",
     "@nuxthub/core": "^0.7.1",
     "@nuxtjs/i18n": "^8.3.3",
-    "@nuxtjs/mdc": "^0.8.3",
     "@nuxtjs/sitemap": "^6.0.0-beta.1",
     "nuxt": "^3.12.4",
+    "nuxt-mail": "^5.0.1",
     "vue": "latest"
   },
   "devDependencies": {
