--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
+    "sass": "^1.78.0",
     "typescript": "^5.5.4",
     "vue-tsc": "^2.0.29",
     "wrangler": "^3.68.0"
